# get

./: Aster.cpp  Aster.hpp  Astronaut.cpp  Astronaut.hpp  CMakeLists.txt  GLX(1).cpp  GLX.cpp  GLXFinal.cpp  GLXQ.cpp  Planet.cpp  Planet.hpp  Quassar.cpp  Quassar.hpp  SSA.cpp  SpaceObject.hpp  Space_Staion.cpp  Space_Staion.hpp  Star.cpp  Star.hpp  StarQues.cpp  StarQues.hpp  e2.cpp  main.cpp  sem.cpp  space.cpp  ссылка
